--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -133,7 +133,7 @@
                     android:layout_margin="@dimen/margin_small"
                     android:layout_marginLeft="0dp"
                     android:layout_toRightOf="@+id/valueImage"
-                    android:drawableLeft="@drawable/ic_weight"
+                    android:drawableLeft="@drawable/ic_value"
                     android:gravity="center"
                     android:text="@string/value" />
             </android.support.v7.widget.CardView>
